fix: correção do overflow no css

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,9 +26,12 @@ body {
     background-color: var(--roxo);
 }
 
+.group-card {
+    overflow: hidden;
+}
+
 @media (min-width: 768px) { 
     .group-card {
         height: 18rem !important;
-        overflow: hidden;
     }
 }
